fix icon spacing

--- a/components/color-palette.module.css
+++ b/components/color-palette.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   position: absolute;
-  top: 32vh;
+  top: 33.2vh;
   right: 5vw;
   z-index: 1;
 }
@@ -14,7 +14,7 @@
 
 @media only screen and (max-width: 700px) {
   .container {
-    top: 1.5vh;
+    top: 2.2vh;
     right: 17vw;
   }
 
@@ -41,5 +41,5 @@
   border: solid;
   border-radius: 50%;
   border-width: 0.5vh;
-  margin: 1.5vh;
+  margin: 1.3vh;
 }
