--- a/components/contact-list.module.css
+++ b/components/contact-list.module.css
@@ -22,12 +22,12 @@
 @media (max-width: 700px) {
   .listContainer {
     width: 10vw;
-    height: 23vh;
+    height: 27vh;
     position: absolute;
     z-index: 1;
     display: grid;
     justify-items: center;
-    margin-top: 9.7vh;
+    margin-top: 8vh;
     margin-right: 9vw;
     right: 14vw;
   }
